--- a/Gopaddi/VC/Onboarding/OnboardingFirstCell.xib
+++ b/Gopaddi/VC/Onboarding/OnboardingFirstCell.xib
@@ -11,69 +11,66 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingFirstCell" id="xdk-RM-nVM" customClass="OnboardingFirstCell" customModule="Gopaddi" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
+                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IdE-Rb-xSy">
-                        <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2h-NB-8mj">
-                                <rect key="frame" x="0.0" y="0.0" width="301" height="561"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QfF-hG-ob6">
-                                        <rect key="frame" x="50" y="60" width="251" height="150"/>
+                                        <rect key="frame" x="50" y="60" width="343" height="209"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="150" id="DRt-nP-GrT"/>
+                                            <constraint firstAttribute="height" constant="209" id="DRt-nP-GrT"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Gopaddi !!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSo-ap-2Ag">
-                                        <rect key="frame" x="54.333333333333329" y="240" width="192.33333333333337" height="26"/>
+                                        <rect key="frame" x="94.666666666666686" y="319" width="204" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="26" id="QXE-hI-gdx"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXn-wF-EvR">
-                                        <rect key="frame" x="5" y="274" width="291" height="70"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="70" id="Ol3-VR-X7a"/>
-                                        </constraints>
+                                        <rect key="frame" x="16" y="353" width="361" height="67"/>
                                         <string key="text">Welcome to Gopaddi, your one-stop shop for unforgettable travel experiences!  Dive into curated getaways, explore hidden gems, and unlock exclusive deals. Let's turn your travel dreams into memories that last a lifetime. Explore with us! </string>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="9"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="N1x-Td-eak">
-                                        <rect key="frame" x="0.0" y="411" width="301" height="150"/>
+                                        <rect key="frame" x="0.0" y="677" width="393" height="175"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding2" translatesAutoresizingMaskIntoConstraints="NO" id="xXu-yr-lh7">
-                                                <rect key="frame" x="0.0" y="0.0" width="301" height="75"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="87.666666666666671"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group" translatesAutoresizingMaskIntoConstraints="NO" id="GnF-dG-nUD">
-                                                <rect key="frame" x="0.0" y="75" width="301" height="75"/>
+                                                <rect key="frame" x="0.0" y="87.666666666666629" width="393" height="87.333333333333314"/>
                                             </imageView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="150" id="bCg-L7-83q"/>
+                                            <constraint firstAttribute="height" constant="175" id="bCg-L7-83q"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.32941176470588235" blue="0.89411764705882346" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="xSo-ap-2Ag" firstAttribute="top" secondItem="QfF-hG-ob6" secondAttribute="bottom" constant="50" id="0dP-1p-WKI"/>
                                     <constraint firstAttribute="bottom" secondItem="N1x-Td-eak" secondAttribute="bottom" id="7HX-ae-56p"/>
-                                    <constraint firstItem="bXn-wF-EvR" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" constant="5" id="J7Z-co-Zgz"/>
+                                    <constraint firstItem="bXn-wF-EvR" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" constant="16" id="J7Z-co-Zgz"/>
                                     <constraint firstItem="xSo-ap-2Ag" firstAttribute="centerX" secondItem="x2h-NB-8mj" secondAttribute="centerX" id="Jk1-fd-sO8"/>
                                     <constraint firstItem="QfF-hG-ob6" firstAttribute="top" secondItem="x2h-NB-8mj" secondAttribute="top" constant="60" id="JnJ-hC-cfA"/>
-                                    <constraint firstItem="xSo-ap-2Ag" firstAttribute="top" secondItem="QfF-hG-ob6" secondAttribute="bottom" constant="30" id="Koe-U0-DDT"/>
                                     <constraint firstItem="N1x-Td-eak" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" id="VV3-AC-emj"/>
                                     <constraint firstAttribute="trailing" secondItem="QfF-hG-ob6" secondAttribute="trailing" id="Zd5-sz-XFZ"/>
                                     <constraint firstItem="QfF-hG-ob6" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" constant="50" id="bPo-zM-kpd"/>
-                                    <constraint firstAttribute="trailing" secondItem="bXn-wF-EvR" secondAttribute="trailing" constant="5" id="eZl-17-ltg"/>
+                                    <constraint firstAttribute="trailing" secondItem="bXn-wF-EvR" secondAttribute="trailing" constant="16" id="eZl-17-ltg"/>
                                     <constraint firstItem="bXn-wF-EvR" firstAttribute="top" secondItem="xSo-ap-2Ag" secondAttribute="bottom" constant="8" id="uUd-wP-dtp"/>
                                     <constraint firstAttribute="trailing" secondItem="N1x-Td-eak" secondAttribute="trailing" id="uWi-XH-h5s"/>
                                 </constraints>
