--- a/Gopaddi/VC/Onboarding/OnboardingThirdCell.xib
+++ b/Gopaddi/VC/Onboarding/OnboardingThirdCell.xib
@@ -11,57 +11,59 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingThirdCell" id="tLH-Ss-btz" customClass="OnboardingThirdCell" customModule="Gopaddi" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="317" height="527"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="317" height="527"/>
+                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Cy-dJ-BgE">
-                        <rect key="frame" x="0.0" y="0.0" width="317" height="527"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZY4-5d-Wvj">
-                                <rect key="frame" x="0.0" y="0.0" width="317" height="527"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gopaddi - Where travel meets social" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sQ-jw-JUN">
-                                        <rect key="frame" x="20" y="110" width="277" height="18"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <rect key="frame" x="35" y="107" width="323" height="21.666666666666657"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <color key="textColor" red="0.90588235289999997" green="0.94117647059999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fSY-h7-Yyo">
-                                        <rect key="frame" x="15" y="136" width="287" height="36"/>
+                                        <rect key="frame" x="16" y="136.66666666666666" width="361" height="50.333333333333343"/>
                                         <string key="text">LabelShare travel tips, recommendations, and stories. Find travel buddies with similar interests; post stunning travel photos and videos; document your experiences, and inspire others. </string>
-                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" red="0.90588235289999997" green="0.94117647059999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="-33" translatesAutoresizingMaskIntoConstraints="NO" id="5XR-he-mO7">
-                                        <rect key="frame" x="0.0" y="187" width="317" height="350"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding4" translatesAutoresizingMaskIntoConstraints="NO" id="AKn-dN-6ja">
-                                                <rect key="frame" x="0.0" y="0.0" width="175" height="350"/>
-                                            </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding5" translatesAutoresizingMaskIntoConstraints="NO" id="OXS-R7-Anh">
-                                                <rect key="frame" x="142" y="0.0" width="175" height="350"/>
-                                            </imageView>
-                                        </subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding5" translatesAutoresizingMaskIntoConstraints="NO" id="OXS-R7-Anh">
+                                        <rect key="frame" x="153" y="243" width="240" height="460"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="350" id="n3B-7U-nQZ"/>
+                                            <constraint firstAttribute="height" constant="460" id="2qM-6X-xud"/>
+                                            <constraint firstAttribute="width" constant="240" id="vS6-Gg-wEI"/>
                                         </constraints>
-                                    </stackView>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding4" translatesAutoresizingMaskIntoConstraints="NO" id="AKn-dN-6ja">
+                                        <rect key="frame" x="0.0" y="243" width="240" height="400"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="Sex-iF-drG"/>
+                                            <constraint firstAttribute="height" constant="400" id="pHk-8m-jxj"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.32941176470588235" blue="0.89411764705882346" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="4sQ-jw-JUN" secondAttribute="trailing" constant="20" id="01l-B9-9O0"/>
-                                    <constraint firstItem="5XR-he-mO7" firstAttribute="leading" secondItem="ZY4-5d-Wvj" secondAttribute="leading" id="6Ul-8P-BL9"/>
-                                    <constraint firstItem="4sQ-jw-JUN" firstAttribute="leading" secondItem="ZY4-5d-Wvj" secondAttribute="leading" constant="20" id="74u-Bb-euf"/>
+                                    <constraint firstAttribute="trailing" secondItem="4sQ-jw-JUN" secondAttribute="trailing" constant="35" id="01l-B9-9O0"/>
+                                    <constraint firstItem="OXS-R7-Anh" firstAttribute="top" secondItem="fSY-h7-Yyo" secondAttribute="bottom" constant="56" id="5Dj-tx-ncC"/>
+                                    <constraint firstItem="4sQ-jw-JUN" firstAttribute="leading" secondItem="ZY4-5d-Wvj" secondAttribute="leading" constant="35" id="74u-Bb-euf"/>
+                                    <constraint firstItem="AKn-dN-6ja" firstAttribute="leading" secondItem="ZY4-5d-Wvj" secondAttribute="leading" id="BSb-6V-kwu"/>
                                     <constraint firstItem="fSY-h7-Yyo" firstAttribute="top" secondItem="4sQ-jw-JUN" secondAttribute="bottom" constant="8" id="PMW-Bh-jyE"/>
-                                    <constraint firstItem="fSY-h7-Yyo" firstAttribute="leading" secondItem="ZY4-5d-Wvj" secondAttribute="leading" constant="15" id="SJK-r5-KbY"/>
-                                    <constraint firstAttribute="trailing" secondItem="fSY-h7-Yyo" secondAttribute="trailing" constant="15" id="alR-Zr-yDL"/>
-                                    <constraint firstItem="4sQ-jw-JUN" firstAttribute="top" secondItem="ZY4-5d-Wvj" secondAttribute="top" constant="110" id="eMi-4I-DIp"/>
-                                    <constraint firstAttribute="trailing" secondItem="5XR-he-mO7" secondAttribute="trailing" id="h5C-wx-0br"/>
-                                    <constraint firstItem="5XR-he-mO7" firstAttribute="top" secondItem="fSY-h7-Yyo" secondAttribute="bottom" constant="15" id="nMK-if-Rdi"/>
+                                    <constraint firstItem="OXS-R7-Anh" firstAttribute="top" secondItem="AKn-dN-6ja" secondAttribute="bottom" constant="-400" id="QX6-hq-6Wk"/>
+                                    <constraint firstItem="AKn-dN-6ja" firstAttribute="top" secondItem="fSY-h7-Yyo" secondAttribute="bottom" constant="56" id="Rhj-wV-8yk"/>
+                                    <constraint firstItem="fSY-h7-Yyo" firstAttribute="leading" secondItem="ZY4-5d-Wvj" secondAttribute="leading" constant="16" id="SJK-r5-KbY"/>
+                                    <constraint firstAttribute="trailing" secondItem="fSY-h7-Yyo" secondAttribute="trailing" constant="16" id="alR-Zr-yDL"/>
+                                    <constraint firstItem="4sQ-jw-JUN" firstAttribute="top" secondItem="ZY4-5d-Wvj" secondAttribute="top" constant="107" id="eMi-4I-DIp"/>
+                                    <constraint firstAttribute="trailing" secondItem="OXS-R7-Anh" secondAttribute="trailing" id="zRo-Z1-gNx"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -87,7 +89,7 @@
                 <constraint firstItem="3Cy-dJ-BgE" firstAttribute="leading" secondItem="tLH-Ss-btz" secondAttribute="leading" id="bW2-co-WK1"/>
             </constraints>
             <size key="customSize" width="317" height="527"/>
-            <point key="canvasLocation" x="779" y="3"/>
+            <point key="canvasLocation" x="773.28244274809163" y="2.8169014084507045"/>
         </collectionViewCell>
     </objects>
     <resources>
